--- a/css/style.css
+++ b/css/style.css
@@ -1037,7 +1037,7 @@ span {
 
 .contact-intro{
     display: inline-block;
-    text-align: center;
+    text-align: left;
     font-size: clamp(1rem, 0.945rem + 0.353vw, 1.6rem);
     margin: 0 8% 3em 8%;
 }
@@ -1048,7 +1048,7 @@ span {
 }
 
 .contact form {
-    max-width: 70rem;
+    max-width: 50%;
     margin: 1rem auto;
     text-align: center;
     margin-bottom: 3rem;
