mas ajustes mobile

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -252,6 +252,10 @@
         margin: 0 auto;
         max-width: 90%;
     }
+
+    .info-description{
+        text-align: center;
+    }
     
 }
 
