--- a/css/style.css
+++ b/css/style.css
@@ -580,7 +580,7 @@ span {
     margin: 0 8% .5em 8%;
 }
 
-/* FLIP CARDS */
+/* FLIP CARDS – LAYOUT GENERAL */
 
 .card-container {
     display: grid;
@@ -588,11 +588,11 @@ span {
     gap: 2rem;
     justify-items: center;
     width: 100%;
-    margin: 3rem 0rem;
+    margin: 3rem 0;
 }
 
-.text-shadow {
-    font-size: 1.8em;
+.front-title {
+    font-size: clamp(1.5rem, 1.449rem + 0.22vw, 1.8rem);
     text-align: center;
     text-transform: uppercase;
 }
@@ -602,15 +602,6 @@ span {
     text-transform: uppercase;
     margin-bottom: .5rem;
     text-shadow: 3px 3px 5px rgb(0, 255, 225);
-}
-
-.card-linea {
-    display: block;
-    width: 60%;
-    height: 2px;
-    background-color: #00bcd4;
-    margin: .2rem auto 1rem auto;
-    border-radius: 2px;
 }
 
 .back-info {
@@ -624,74 +615,13 @@ span {
     margin-left: 1rem;
 }
 
-.flip {
-    position: relative;
-}
-
-.flip:nth-of-type(1) .front {
-    background:
-        linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.3)),
-        url('../images/landing.jpg');
-}
-
-.flip:nth-of-type(2) .front {
-    background:
-        linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.3)),
-        url('../images/institucional.jpg');
-}
-
-.flip:nth-of-type(3) .front {
-    background:
-        linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.3)),
-        url('../images/maintenance.jpg');
-}
-
-.flip>.front,
-.flip>.back {
-    transition-timing-function: cubic-bezier(0.175, 0.3, 0.23, 1.275);
-    transition-duration: 1s;
-    transition-property: transform, opacity;
-    box-shadow: 10px 10px 12px rgb(0, 0, 0);
-    border: 1px solid rgba(184, 184, 184, 0.338);
-    width: 500px;
-}
-
-.flip>.front {
-    transform: rotateY(0deg);
-}
-
-.flip>.back {
-    position: absolute;
-    /* opacity: 0; */
-    opacity: 1;
-    top: 0px;
-    left: 0px;
-    width: 100%;
-    height: 100%;
-    /* transform: rotateY(-180deg); */
-    /* transform: rotateY(180deg); */
-}
-
-.flip:hover>.front {
-    transform: rotateY(180deg);
-}
-
-.flip:hover>.back {
-    opacity: 1;
-    transform: rotateY(0deg);
-}
-
-.flip.flip-vertical>.back {
-    /* transform: rotateX(-180deg); */
-    /* transform: rotateX(-180deg); */
-}
-
-.flip.flip-vertical:hover>.front {
-    transform: rotateX(180deg);
-}
-
-.flip.flip-vertical:hover>.back {
-    transform: rotateX(0deg);
+.card-linea {
+    width: 60%;
+    height: 2px;
+    background-color: #00bcd4;
+    margin: .2rem auto 1rem auto;
+    border-radius: 2px;
+    display: block;
 }
 
 .flip {
@@ -701,39 +631,88 @@ span {
     margin-bottom: 1em;
 }
 
-.flip>.front,
-.flip>.back {
+.flip > .front,
+.flip > .back {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    color: white;
     background-size: cover !important;
     background-position: center !important;
     min-height: 550px;
     padding: 1em;
     border-radius: 10px;
+
+    /* necesarias para que NO se clickee lo de atrás */
+    backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
+
+    transition-timing-function: cubic-bezier(0.175, 0.3, 0.23, 1.275);
+    transition-duration: 1s;
+    transition-property: transform, opacity;
+
+    box-shadow: 10px 10px 12px rgb(0, 0, 0);
+    border: 1px solid rgba(184, 184, 184, 0.338);
+    width: 500px;
 }
 
-.flip>.front {
+/* Frente visible */
+.flip > .front {
+    transform: rotateY(0deg);
     justify-content: flex-end;
 }
 
+/* Dorso oculto */
+.flip > .back {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    transform: rotateY(180deg);
+}
+
+.flip:hover > .front {
+    transform: rotateY(180deg);
+}
+
+.flip:hover > .back {
+    opacity: 1;
+    transform: rotateY(0deg);
+}
+
+.flip.flip-vertical > .back {
+    transform: rotateX(-180deg);
+}
+
+.flip.flip-vertical:hover > .front {
+    transform: rotateX(180deg);
+}
+
+.flip.flip-vertical:hover > .back {
+    transform: rotateX(0deg);
+}
+
+/* FRONT */
+.flip:nth-of-type(1) .front {
+    background: linear-gradient(rgba(0,0,0,.2), rgba(0,0,0,.3)), url('../images/landing.jpg');
+}
+.flip:nth-of-type(2) .front {
+    background: linear-gradient(rgba(0,0,0,.2), rgba(0,0,0,.3)), url('../images/institucional.jpg');
+}
+.flip:nth-of-type(3) .front {
+    background: linear-gradient(rgba(0,0,0,.2), rgba(0,0,0,.3)), url('../images/maintenance.jpg');
+}
+
+/* BACK */
 .flip:nth-of-type(1) .back {
-    background:
-        linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.8)),
-        url('../images/landing.jpg');
+    background: linear-gradient(rgba(0,0,0,.9), rgba(0,0,0,.8)), url('../images/landing.jpg');
 }
-
 .flip:nth-of-type(2) .back {
-    background:
-        linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.8)),
-        url('../images/institucional.jpg');
+    background: linear-gradient(rgba(0,0,0,.9), rgba(0,0,0,.8)), url('../images/institucional.jpg');
 }
-
 .flip:nth-of-type(3) .back {
-    background:
-        linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.8)),
-        url('../images/maintenance.jpg');
+    background: linear-gradient(rgba(0,0,0,.9), rgba(0,0,0,.8)), url('../images/maintenance.jpg');
 }
 
 .flip:nth-child(1) .back p:nth-last-of-type(3),
@@ -759,8 +738,13 @@ span {
     margin: 1rem 0 0 0;
     letter-spacing: 1px;
     padding: .7rem 2rem;
-    font-size: 1.1rem;
     font-size: clamp(0.9rem, 0.866rem + 0.146vw, 1.1rem);
+    pointer-events: none;
+}
+
+/* habilitar solo cuando está visible */
+.flip:hover .card-button {
+    pointer-events: auto;
 }
 
 /* TERMINOS DEL SERVICIO ACORDEON */
@@ -793,7 +777,7 @@ span {
 .accordion-intro{
     display: inline-block;
     text-align: center;
-    font-size: 1.1rem;
+    font-size: clamp(0.9rem, 0.866rem + 0.146vw, 1.1rem);
     margin: 0 10% 1.5em 10%;
 }
 
@@ -832,7 +816,6 @@ span {
 
 .accordion-header:hover{
     color: rgb(6, 230, 255);
-    /* text-shadow: 2px 2px 5px rgb(119, 119, 119); */
     transition: all .5s ease;
 }
 
@@ -962,7 +945,7 @@ span {
 
 .info-description {
     margin: 1rem 0;
-    font-size: 1.1rem;
+    font-size: clamp(0.85rem, 0.807rem + 0.183vw, 1.1rem);
     font-weight: normal;
 }
 
@@ -1023,7 +1006,7 @@ span {
 .contact {
     user-select: none;
     min-height: 100vh;
-    scroll-margin-top: 4.5rem;
+    scroll-margin-top: 5rem;
 }
 
 .title-contact-container {
