--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,17 @@ body {
     overflow-x: hidden;
 }
 
+/* ESTILOS COMUNES PARA TODA LA PAGINA */
+
+.linea {
+    display: block;
+    width: 3%;
+    height: 5px;
+    background-color: #00bcd4;
+    border-radius: 2px;
+    margin: 1rem auto;
+}
+
 .background {
     position: fixed;
     inset: 0;
@@ -45,25 +56,6 @@ body {
     background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='120' height='120'><rect width='120' height='120' fill='none' stroke='rgba(255,255,255,0.05)' stroke-width='1'/></svg>");
     background-repeat: repeat;
     background-size: 120px 120px;
-}
-/* 
-section {
-    min-height: 100vh;
-} */
-
-/* EFECTO BRIGHT MOUSE */
-
-#cursor-halo {
-    position: fixed;
-    width: 1200px;
-    height: 1200px;
-    border-radius: 50%;
-    pointer-events: none;
-    background: radial-gradient(circle, rgba(0, 50, 215, 0.205) 0%, transparent 50%);
-    transform: translate(-50%, -50%);
-    transition: transform 0.1s ease-out;
-    mix-blend-mode: difference;
-    z-index: -10;
 }
 
 /*====================================================================================================*/
@@ -270,72 +262,40 @@ section {
     display: block;
     user-select: none;
     scroll-margin-top: 4.5rem;
-    max-width: 100rem;
     min-height: 90vh;
-    margin: 0 auto;
+    margin: 0 5%;
 }
 
 .about-title {
-    display: flex;
-    text-align: center;
-    justify-content: center;
-    margin-top: 5rem;
-    align-items: center;
-}
-
-.heading,
-.portfolio-title,
-.title-container span,
-.about-title span,
-.heading-contact {
     font-size: clamp(1.7rem, 1.391rem + 1.318vw, 3.5rem);
     font-weight: bold;
-    letter-spacing: 3px;
+    letter-spacing: 7px;
     text-transform: uppercase;
-}
-
-.title-container{
-    display: flex;
-    justify-content: center;
-}
-
-.about-title span,
-.title-container span {
-    margin-left: 20px;
-}
-
-.linea {
-    display: block;
-    width: 3%;
-    height: 5px;
-    background-color: #00bcd4;
-    border-radius: 2px;
-    margin: 2rem auto;
+    text-align: center;
+    margin-top: 5rem;
 }
 
 .about-intro {
-    display: inline-block;
-    text-align: center;
+    display: block;
     font-size: clamp(1rem, 0.945rem + 0.353vw, 1.6rem);
-    margin: 0 4rem 3em 4rem;
+    margin: 2rem auto 2em auto;
 }
 
 .about-container {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 6rem;
-    margin: 0 4rem;
-}
-
-.about-text-title,
-.skills-title {
-    font-size: clamp(1rem, 0.889rem + 0.907vw, 1.8rem);
-    margin-bottom: 2rem;
+    margin: 0 auto;
 }
 
 .about-text-container {
     display: block;
     unicode-bidi: isolate;
+}
+
+.about-text-title{
+    font-size: clamp(1rem, 0.889rem + 0.907vw, 1.8rem);
+    margin-bottom: 2rem;
 }
 
 .about-text {
@@ -345,6 +305,15 @@ section {
 
 .about-text:not(:last-child) {
     margin-bottom: 1.2rem;
+}
+
+.skills-container{
+    display: block;
+}
+
+.skills-title {
+    font-size: clamp(1rem, 0.889rem + 0.907vw, 1.8rem);
+    margin-bottom: 2rem;
 }
 
 .skills {
@@ -371,6 +340,8 @@ section {
     width: 24px;
     margin-right: 10px;
 }
+
+/* VER DONDE VOY A PONERLO */
 
 .btn {
     display: inline-block;
@@ -410,145 +381,6 @@ section {
     width: 100%;
 }
 
-.h-translate {
-    display: inline;
-}
-
-.skills-title h2 {
-    padding-bottom: 1rem;
-    margin: 3rem 0;
-    font-size: clamp(1.2rem, 1.121rem + 0.362vw, 1.7rem);
-    border-bottom: 1px solid var(--main-color);
-}
-
-.tech {
-    margin: .5rem;
-    transition: .5s ease;
-    width: 6%;
-}
-
-.tech:hover {
-    transform: scale(1.3);
-}
-
-.certificates-title h2 {
-    padding-bottom: 1rem;
-    margin: 1.5rem 0;
-    font-size: clamp(1.2rem, 1.121rem + 0.362vw, 1.7rem);
-    border-bottom: 1px solid var(--main-color);
-}
-
-.certificates-container {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, auto);
-    gap: 1rem;
-}
-
-.certificates-title {
-    grid-column-start: 1;
-    grid-column-end: 4;
-}
-
-.certificates-box {
-    display: flex;
-    background: var(--bg-color);
-    padding: 2rem;
-    border-radius: 2rem;
-    text-align: center;
-    border: .1rem solid var(--text-color);
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-.scroll-down {
-    height: 70px;
-    width: 40px;
-    border: 3px solid rgb(89, 95, 255);
-    position: absolute;
-    bottom: 20px;
-    border-radius: 50px;
-    cursor: pointer;
-    inset: 0;
-    margin: auto;
-    margin-bottom: 20px;
-    z-index: 10;
-}
-
-.scroll-down::before,
-.scroll-down::after {
-    content: "";
-    position: absolute;
-    top: 20%;
-    left: 50%;
-    height: 10px;
-    width: 10px;
-    transform: translate(-50%, -100%) rotate(45deg);
-    border: 2px solid rgb(0, 247, 255);
-    border-top: transparent;
-    border-left: transparent;
-    animation: scroll-down 1.2s ease-in-out infinite;
-}
-
-.scroll-down::before {
-    top: 30%;
-    animation-delay: 0.3s;
-}
-
-@keyframes scroll-down {
-    0% {
-        opacity: 0;
-    }
-
-    30% {
-        opacity: 1;
-    }
-
-    60% {
-        opacity: 1;
-    }
-
-    100% {
-        top: 90%;
-        opacity: 0;
-    }
-}
-
-.certificates-box img {
-    width: 100%;
-}
-
-.certificates-box:nth-child(3) img {
-    width: 80%;
-}
-
-.certificates-box h2 {
-    font-size: clamp(1rem, 0.921rem + 0.362vw, 1.5rem);
-    text-decoration: underline;
-    padding: .5rem 0 0 0;
-}
-
-.certificates-box p {
-    font-size: clamp(.937rem, 0.952rem + 0.217vw, 1.3rem);
-    text-align: center;
-    margin-top: 0;
-    margin-bottom: 1rem;
-}
-
-.certificates-box a {
-    display: inline-block;
-    padding: .3rem 1.8rem;
-    background: var(--main-color);
-    border-radius: 4rem;
-    box-shadow: 0 0 1rem var(--main-color);
-    font-size: clamp(1rem, 0.952rem + 0.217vw, 1.3rem);
-    font-weight: 600;
-    color: var(--second-bg-color);
-    letter-spacing: .1rem;
-    transition: .5s ease;
-}
-
 /*====================================================================================================*/
 /*================================== SERVICES SECTION STYLES =========================================*/
 /*====================================================================================================*/
@@ -557,27 +389,26 @@ section {
     display: block;
     user-select: none;
     scroll-margin-top: 4.5rem;
-    max-width: 100rem;
-    margin: 0 auto;
+    min-height: 90vh;
+    margin: 0 5%;
 }
 
 .services-title {
-    font-size: clamp(2rem, 1.5rem + 1.248vw, 3.5rem);
+    font-size: clamp(1.7rem, 1.391rem + 1.318vw, 3.5rem);
     font-weight: bold;
-    letter-spacing: 3px;
+    letter-spacing: 7px;
     text-transform: uppercase;
     text-align: center;
-    margin-top: 3rem;
+    margin-top: 5rem;
 }
 
 .services-intro{
-    display: inline-block;
-    text-align: center;
+    display: block;
     font-size: clamp(1rem, 0.945rem + 0.353vw, 1.6rem);
-    margin: 0 8% .5em 8%;
+    margin: 2rem auto 2em auto;
 }
 
-/* FLIP CARDS – LAYOUT GENERAL */
+/* FLIP CARDS */
 
 .card-container {
     display: grid;
@@ -585,7 +416,6 @@ section {
     gap: 2rem;
     justify-items: center;
     width: 100%;
-    margin: 3rem 0;
 }
 
 .front-title {
@@ -628,8 +458,8 @@ section {
     margin-bottom: 1em;
 }
 
-.flip > .front,
-.flip > .back {
+.front,
+.back {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -653,13 +483,13 @@ section {
 }
 
 /* Frente visible */
-.flip > .front {
+.front {
     transform: rotateY(0deg);
     justify-content: flex-end;
 }
 
 /* Dorso oculto */
-.flip > .back {
+.back {
     position: absolute;
     top: 0;
     left: 0;
@@ -669,7 +499,7 @@ section {
     transform: rotateY(180deg);
 }
 
-.flip:hover > .front {
+.flip:hover .front {
     transform: rotateY(180deg);
 }
 
@@ -739,7 +569,6 @@ section {
     pointer-events: none;
 }
 
-/* habilitar solo cuando está visible */
 .flip:hover .card-button {
     pointer-events: auto;
 }
@@ -751,10 +580,11 @@ section {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-bottom: 3rem;
+    margin: 3rem 0;
 }
 
 .accordion-title{
+    display: block;
     font-size: 1.8rem;
     font-weight: bold;
     letter-spacing: 3px;
@@ -773,22 +603,18 @@ section {
 
 .accordion-intro{
     display: inline-block;
-    text-align: center;
     font-size: clamp(0.9rem, 0.866rem + 0.146vw, 1.1rem);
-    margin: 0 10% 1.5em 10%;
+    margin: 2rem 0;
+    text-align: center;
 }
 
 .accordion {
     width: 100%;
     max-width: 750px;
-    /* background: #1e1e1e00; */
-    /* box-shadow: 0 4px 10px rgba(0, 0, 0, 0.4); */
     overflow: hidden;
 }
 
 .accordion-item {
-    /* border-bottom: 1px solid #333; */
-    /* margin: .7rem; */
     transition: all .5s ease;
 }
 
@@ -860,25 +686,38 @@ section {
 /*====================================================================================================*/
 
 .portfolio {
-    max-width: 100rem;
-    margin: auto;
-    scroll-margin-top: 4.5rem;
+    display: block;
     user-select: none;
+    scroll-margin-top: 4.5rem;
+    min-height: 90vh;
+    margin: 0 5%;
+}
+
+.portfolio-title{
+    font-size: clamp(1.7rem, 1.391rem + 1.318vw, 3.5rem);
+    font-weight: bold;
+    letter-spacing: 7px;
+    text-transform: uppercase;
+    text-align: center;
+    margin-top: 5rem;
 }
 
 .portfolio-intro {
-    display: inline-block;
-    text-align: center;
+    display: block;
     font-size: clamp(1rem, 0.945rem + 0.353vw, 1.6rem);
-    margin: 0 8% .5em 8%;
+    margin: 2rem auto 2em auto;
 }
 
 .project-container {
     display: grid;
-    grid-template-columns: 1.35fr 1fr;
+    grid-template-columns: 1fr 1fr;
     align-items: center;
     gap: 2rem;
-    margin: 8rem 3rem;
+    margin: 4rem 0;
+}
+
+.project-container:nth-last-child{
+    margin: 0;
 }
 
 .project-img-cont {
@@ -899,7 +738,6 @@ section {
     display: block;
     position: relative;
     z-index: 2;
-    /* min-width: 640px; */
 }
 
 .screen {
@@ -968,25 +806,6 @@ section {
     border-radius: 100%;
 }
 
-.hvr-bounce-in {
-    display: inline-block;
-    vertical-align: middle;
-    -webkit-transform: perspective(1px) translateZ(0);
-    transform: perspective(1px) translateZ(0);
-    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-    -webkit-transition-duration: 0.5s;
-    transition-duration: 0.5s;
-}
-
-.hvr-bounce-in:hover,
-.hvr-bounce-in:focus,
-.hvr-bounce-in:active {
-    -webkit-transform: scale(1.2);
-    transform: scale(1.2);
-    -webkit-transition-timing-function: cubic-bezier(0.47, 2.02, 0.31, -0.36);
-    transition-timing-function: cubic-bezier(0.47, 2.02, 0.31, -0.36);
-}
-
 .project-techs {
     display: flex;
     flex-direction: row;
@@ -1006,14 +825,13 @@ section {
     scroll-margin-top: 5rem;
 }
 
-.title-contact-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 1.5em;
-    height: 3rem;
+.contact-title{
+    font-size: clamp(1.7rem, 1.391rem + 1.318vw, 3.5rem);
+    font-weight: bold;
+    letter-spacing: 7px;
+    text-transform: uppercase;
     text-align: center;
-    margin-bottom: 3rem;
+    margin-top: 5rem;
 }
 
 .contact-intro{
@@ -1030,11 +848,6 @@ section {
 
 .contact-intro span a:hover{
     color: rgb(0, 255, 21);
-}
-
-#cont-en,
-#cont-es {
-    position: absolute;
 }
 
 .contact form {
