--- a/css/style.css
+++ b/css/style.css
@@ -161,7 +161,7 @@ body {
 
 .img-container{
     position: absolute;
-    background: url(/images/background2.png);
+    background: url(../images/background2.png);
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
@@ -930,7 +930,6 @@ body {
     background: var(--bg-color);
 }
 
-
 .menu-footer{
     display: flex;
     flex-direction: row;
@@ -947,7 +946,6 @@ body {
     width: 100%;
     object-fit: cover;
     filter: brightness(0) invert(1);
-    /* filter: invert(55%) sepia(93%) saturate(2000%) hue-rotate(160deg) brightness(105%) contrast(98%); */
     opacity: 0.5;
     transition: opacity .5s ease;
 }
@@ -955,4 +953,514 @@ body {
 .menu-footer a:hover img {
     filter: brightness(0) invert(1);
     opacity: 1;
+}
+
+
+
+@media (max-width: 1650px) {
+
+    .about{
+        min-height: 85vh;
+    }
+
+    .card-container{
+        grid-template-columns: repeat(2,1fr);
+    }
+
+    .flip:nth-child(1){
+        justify-self: right;
+    }
+
+    .flip:nth-child(2){
+        justify-self: left;
+    }
+
+    .card-container .flip:nth-child(3){
+        grid-column: span 2;
+    }
+    
+}
+
+@media (max-width: 1250px) {
+
+    .about-container{
+        grid-template-columns: 1fr;
+        gap: 3rem;
+    }
+
+    .project-container{
+        grid-template-columns: 1fr;
+        margin: 3rem;
+    }
+
+    .services-intro{
+        margin: 0 5% .5rem 5%;
+    }
+
+    .linea{
+        margin: 1.5rem auto;
+    }
+
+    .services,
+    .portfolio{
+        margin: 0 2rem;
+    }
+
+    .card-container{
+        grid-template-columns: 1fr;
+        justify-content: center;
+    }
+
+    .flip:nth-child(1){
+        justify-self: center;
+    }
+
+    .flip:nth-child(2){
+        justify-self: center;
+    }
+
+    .card-container .flip:nth-child(3){
+        grid-column: auto;
+    }
+
+    .contact form {
+        max-width: 60%;
+    }
+
+}
+
+@media (max-width: 768px) {
+
+    #menu-icon {
+        display: block;
+        cursor: pointer;
+    }
+
+    .navbar {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        position: absolute;
+        left: 0;
+        top: -110vh;
+        width: 100%;
+        padding: 1rem 3%;
+        background: linear-gradient(to right, #141414, #232526);
+        border-top: .1em solid rgba(0, 0, 0, .2);
+        border-bottom: .2em solid rgba(0, 225, 255, 0.365);
+        box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .2);
+        opacity: 0;
+        pointer-events: none;
+    }
+
+    .social-bar{
+        display: none;
+    }
+
+    @keyframes slideDown {
+        from {
+            opacity: 0;
+            transform: translateY(-100vh);
+        }
+
+        to {
+            opacity: 1;
+            transform: translateY(108vh);
+        }
+    }
+
+    @keyframes slideUp {
+        from {
+            opacity: 1;
+            transform: translateY(108vh);
+        }
+
+        to {
+            opacity: 0;
+            transform: translateY(-100vh);
+        }
+    }
+
+    .navbar.active {
+        display: block;
+        padding-top: 2.5rem;
+        animation: slideDown 1s forwards ease;
+        pointer-events: auto;
+    }
+
+    .navbar.closing {
+        display: block;
+        animation: slideUp 2s forwards ease;
+    }
+
+    .active-icon {
+        position: relative;
+        z-index: 10000;
+    }
+
+    .navbar a {
+        display: block;
+        margin: 2em 0;
+    }
+
+
+    .about > *{
+        margin-left: 2rem;
+        margin-right: 2rem;
+    }
+
+    .about-intro{
+        text-align: left;
+    }
+
+    .linea {
+        width: 65%;
+        height: 2px;
+        margin: 2rem auto;
+    }
+
+    .about a{
+        display: none;
+    }
+
+    .services-intro,
+    .portfolio-intro{
+        margin: 0;
+        text-align: left;
+    }
+
+    .accordion-intro{
+        margin: 0 0 2.5em 0;
+        text-align: left;
+    }
+
+    .accordion-line{
+        width: 50%;
+        height: 2px;
+    }
+    
+    .card-button{
+        width: 75%;
+        text-align: center;
+    }
+
+    .project-container{
+        margin: 3rem 0;
+    }
+
+    .mobile-scroll-margin-top{
+        scroll-margin-top: 5.5rem;
+    }
+
+    .home-multiple{
+        min-height: 130px;
+    }
+
+    .home-title{
+        margin-bottom: 1rem;
+        line-height: 1.6;
+    }
+
+    .contact form {
+        max-width: 70%;
+    }
+
+    .contact-intro{
+        margin-bottom: 1rem;
+    }
+
+    .title-contact-container{
+        margin-bottom: 1rem;
+    }
+
+    .show .go-top-button{
+        width: 3rem;
+        height: 3rem;
+    }
+
+    .go-top-button i{
+        font-size: 2.3rem;
+    }
+
+    .go-top-container {
+        bottom: 1rem;
+    }
+}
+
+@media (max-width: 500px) {
+
+    .project-techs {
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .flip>.front,
+    .flip>.back {
+        width: 400px;
+        height: 625px;
+        justify-content: center;
+    }
+
+    .card-button{
+        width: 90%;
+    }
+
+    .services,
+    .portfolio,
+    .about-container{
+        margin: 0 1rem;
+    }
+
+    .contact form{
+        margin: 0 auto;
+        max-width: 90%;
+    }
+
+    .info-description{
+        text-align: center;
+    }
+
+    .about-intro{
+        margin: 0 1rem 2rem 1rem;
+    }
+
+    .contact-intro{
+        margin: 0 1rem 1rem 1rem;
+    }
+
+}
+
+@media (max-width: 375px) {
+
+    .flip{
+        margin: 0;
+    }
+
+    .linea{
+        margin: 1rem auto;
+    }
+
+    .skills-title{
+        text-align: center;
+    }
+
+    .skills{
+        justify-content: center;
+    }
+
+    .flip>.front,
+    .flip>.back {
+        width: 325px;
+        height: 600px;
+        justify-content: center;
+    }
+
+    .scroll-down{
+        margin-bottom: 80px;
+    }
+
+    .home{
+        align-items: flex-start;
+        padding-top: 8rem;
+    }
+
+    .contact-intro{
+        text-align: left;
+        margin-bottom: 1rem;
+    }
+
+    .heading-contact{
+        font-size: 1.5rem;
+    }
+
+    .contact form {
+        max-width:90%;
+    }
+
+    .item{
+        font-size: .9rem;
+    }
+
+    .back-info {
+        font-size: .9rem;
+    }
+
+    .back-items {
+        margin-left: .5rem;
+    }
+
+    .card-button{
+        padding: .6rem .5rem;
+    }
+
+}
+
+
+
+
+/* GO TOP BUTTON */
+
+.go-top-container {
+    position: fixed;
+    bottom: 1.5rem;
+    right: .2rem;
+    width: 3rem;
+    height: 3rem;
+    z-index: -1;
+    transition: .2s;
+}
+
+
+.go-top-button{
+    width: 0rem;
+    height: 0rem;
+    background: #064e8d63;
+    border-radius: 50%;
+    cursor: pointer;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    transition: .2s;
+    z-index: -1;
+}
+
+.go-top-button:hover{
+    background: rgba(0, 225, 255, 0.315);
+    transition: all .5s;
+}
+
+.go-top-button i{
+    position: absolute;
+    font-size: 3.3rem;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0);
+    color: rgba(255, 255, 255, 0.664);
+    transition: .2s;
+}
+
+.show{
+    z-index: 10;
+}
+
+.show .go-top-button{
+    animation: popup .3s ease-in-out;
+    width: 4rem;
+    height: 4rem;
+    z-index: 100000;
+}
+
+.show i{
+    transform: translate(-50%, -50%) scale(1);
+}
+
+@keyframes popup{
+    0%{
+        opacity: 0;
+        width: 0rem;
+        height: 0rem;
+    }
+
+    50%{
+        opacity: .5;
+        width: 4rem;
+        height: 4rem;
+    }
+
+    100%{
+        opacity: 1;
+        width: 3rem;
+        height: 3rem;
+    }
+}
+
+/* BOTON PARA BAJAR A SOBRE MI EN HOME */
+
+.scroll-down {
+    height: 70px;
+    width: 40px;
+    border: 3px solid rgb(89, 95, 255);
+    position: absolute;
+    bottom: 20px;
+    border-radius: 50px;
+    cursor: pointer;
+    inset: 0;
+    margin: auto;
+    margin-bottom: 20px;
+    z-index: 10;
+}
+
+.scroll-down::before,
+.scroll-down::after {
+    content: "";
+    position: absolute;
+    top: 20%;
+    left: 50%;
+    height: 10px;
+    width: 10px;
+    transform: translate(-50%, -100%) rotate(45deg);
+    border: 2px solid rgb(0, 247, 255);
+    border-top: transparent;
+    border-left: transparent;
+    animation: scroll-down 1.2s ease-in-out infinite;
+}
+
+.scroll-down::before {
+    top: 30%;
+    animation-delay: 0.3s;
+}
+
+@keyframes scroll-down {
+    0% {
+        opacity: 0;
+    }
+
+    30% {
+        opacity: 1;
+    }
+
+    60% {
+        opacity: 1;
+    }
+
+    100% {
+        top: 90%;
+        opacity: 0;
+    }
+}
+
+/* EFECTO BRIGHT MOUSE */
+
+#cursor-halo {
+    position: fixed;
+    width: 1200px;
+    height: 1200px;
+    border-radius: 50%;
+    pointer-events: none;
+    background: radial-gradient(circle, rgba(0, 50, 215, 0.205) 0%, transparent 50%);
+    transform: translate(-50%, -50%);
+    transition: transform 0.1s ease-out;
+    mix-blend-mode: difference;
+    z-index: -10;
+}
+
+/* EFECTO BOUNCE ICONOS GITHUB Y LINK EN PORTFOLIO */
+
+.hvr-bounce-in {
+    display: inline-block;
+    vertical-align: middle;
+    -webkit-transform: perspective(1px) translateZ(0);
+    transform: perspective(1px) translateZ(0);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    -webkit-transition-duration: 0.5s;
+    transition-duration: 0.5s;
+}
+
+.hvr-bounce-in:hover,
+.hvr-bounce-in:focus,
+.hvr-bounce-in:active {
+    -webkit-transform: scale(1.2);
+    transform: scale(1.2);
+    -webkit-transition-timing-function: cubic-bezier(0.47, 2.02, 0.31, -0.36);
+    transition-timing-function: cubic-bezier(0.47, 2.02, 0.31, -0.36);
 }
