--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,14 @@
     font-display: swap;
 }
 
-
+@font-face {
+  font-family: 'boxicons';
+  src: url('/fonts/boxicons.woff2') format('woff2'),
+       url('/fonts/boxicons.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
 
 * {
     margin: 0;
