correcion url fuentes

--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,8 @@
 
 @font-face {
     font-family: 'Roboto Slab';
-    src: url('/fonts/Roboto_Slab/Woff/RobotoSlab-Bold.woff2') format('woff2'),
-        url('/fonts/Roboto_Slab/Woff/RobotoSlab-Bold.woff') format('woff');
+    src: url('../fonts/Roboto_Slab/Woff/RobotoSlab-Bold.woff2') format('woff2'),
+        url('../fonts/Roboto_Slab/Woff/RobotoSlab-Bold.woff') format('woff');
     font-weight: 700;
     font-style: normal;
     font-display: swap;
@@ -11,8 +11,8 @@
 
 @font-face{
     font-family: 'Elms Sans';
-    src: url('/fonts/Elms_Sans/WOFF/ElmsSans-Thin.woff2') format('woff2'),
-        url('/fonts/Elms_Sans/WOFF/ElmsSans-Thin.woff') format('woff');
+    src: url('../fonts/Elms_Sans/WOFF/ElmsSans-Thin.woff2') format('woff2'),
+        url('../fonts/Elms_Sans/WOFF/ElmsSans-Thin.woff') format('woff');
     font-weight: 100;
     font-style: normal;
     font-display: swap;
@@ -20,8 +20,8 @@
 
 @font-face{
     font-family: 'Elms Sans';
-    src: url('/fonts/Elms_Sans/WOFF/ElmsSans-ExtraLight.woff2') format('woff2'),
-        url('/fonts/Elms_Sans/WOFF/ElmsSans-ExtraLight.woff') format('woff');
+    src: url('../fonts/Elms_Sans/WOFF/ElmsSans-ExtraLight.woff2') format('woff2'),
+        url('../fonts/Elms_Sans/WOFF/ElmsSans-ExtraLight.woff') format('woff');
     font-weight: 200;
     font-style: normal;
     font-display: swap;
@@ -29,8 +29,8 @@
 
 @font-face{
     font-family: 'Elms Sans';
-    src: url('/fonts/Elms_Sans/WOFF/ElmsSans-Light.woff2') format('woff2'),
-        url('/fonts/Elms_Sans/WOFF/ElmsSans-Light.woff') format('woff');
+    src: url('../fonts/Elms_Sans/WOFF/ElmsSans-Light.woff2') format('woff2'),
+        url('../fonts/Elms_Sans/WOFF/ElmsSans-Light.woff') format('woff');
     font-weight: 300;
     font-style: normal;
     font-display: swap;
@@ -38,8 +38,8 @@
 
 @font-face{
     font-family: 'Elms Sans';
-    src: url('/fonts/Elms_Sans/WOFF/ElmsSans-Regular.woff2') format('woff2'),
-        url('/fonts/Elms_Sans/WOFF/ElmsSans-Regular.woff') format('woff');
+    src: url('../fonts/Elms_Sans/WOFF/ElmsSans-Regular.woff2') format('woff2'),
+        url('../fonts/Elms_Sans/WOFF/ElmsSans-Regular.woff') format('woff');
     font-weight: 400;
     font-style: normal;
     font-display: swap;
@@ -47,8 +47,8 @@
 
 @font-face{
     font-family: 'Elms Sans';
-    src: url('/fonts/Elms_Sans/WOFF/ElmsSans-Medium.woff2') format('woff2'),
-        url('/fonts/Elms_Sans/WOFF/ElmsSans-Medium.woff') format('woff');
+    src: url('../fonts/Elms_Sans/WOFF/ElmsSans-Medium.woff2') format('woff2'),
+        url('../fonts/Elms_Sans/WOFF/ElmsSans-Medium.woff') format('woff');
     font-weight: 500;
     font-style: normal;
     font-display: swap;
@@ -56,8 +56,8 @@
 
 @font-face{
     font-family: 'Elms Sans';
-    src: url('/fonts/Elms_Sans/WOFF/ElmsSans-SemiBold.woff2') format('woff2'),
-        url('/fonts/Elms_Sans/WOFF/ElmsSans-SemiBold.woff') format('woff');
+    src: url('../fonts/Elms_Sans/WOFF/ElmsSans-SemiBold.woff2') format('woff2'),
+        url('../fonts/Elms_Sans/WOFF/ElmsSans-SemiBold.woff') format('woff');
     font-weight: 600;
     font-style: normal;
     font-display: swap;
@@ -65,8 +65,8 @@
 
 @font-face{
     font-family: 'Elms Sans';
-    src: url('/fonts/Elms_Sans/WOFF/ElmsSans-Bold.woff2') format('woff2'),
-        url('/fonts/Elms_Sans/WOFF/ElmsSans-Bold.woff') format('woff');
+    src: url('../fonts/Elms_Sans/WOFF/ElmsSans-Bold.woff2') format('woff2'),
+        url('../fonts/Elms_Sans/WOFF/ElmsSans-Bold.woff') format('woff');
     font-weight: 700;
     font-style: normal;
     font-display: swap;
@@ -74,8 +74,8 @@
 
 @font-face {
   font-family: 'boxicons';
-  src: url('/fonts/boxicons.woff2') format('woff2'),
-       url('/fonts/boxicons.woff') format('woff');
+  src: url('../fonts/boxicons.woff2') format('woff2'),
+       url('../fonts/boxicons.woff') format('woff');
   font-weight: normal;
   font-style: normal;
   font-display: swap;
