--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,3 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Elms+Sans:ital,wght@0,100..900;1,100..900&display=swap'); */
-
 @font-face {
     font-family: 'Roboto Slab';
     src: url('../fonts/Roboto_Slab/Woff/RobotoSlab-Bold.woff2') format('woff2'),
@@ -545,7 +543,7 @@ body {
     justify-content: space-evenly;
     background-size: cover !important;
     background-position: center !important;
-    min-height: 550px;
+    min-height: 600px;
     padding: 1em;
     border-radius: 10px;
 
@@ -1004,9 +1002,9 @@ body {
 .footer {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
-    padding: 2rem 9%;
+    padding: 2rem 8rem;
     background: var(--bg-color);
 }
 
@@ -1017,8 +1015,8 @@ body {
 }
 
 .menu-footer a{
-    width: 35px;
-    height: 35px;
+    width: 32px;
+    height: 32px;
     margin-right: 20px;    
 }
 
@@ -1071,10 +1069,6 @@ body {
     .project-container{
         grid-template-columns: 1fr;
         margin: 3rem;
-    }
-
-    .services-intro{
-        margin: 0 5% .5rem 5%;
     }
 
     .linea{
@@ -1375,21 +1369,17 @@ body {
 
 }
 
-
-
-
 /* GO TOP BUTTON */
 
 .go-top-container {
     position: fixed;
     bottom: 1.5rem;
-    right: .2rem;
+    right: 1rem;
     width: 3rem;
     height: 3rem;
     z-index: -1;
     transition: .2s;
 }
-
 
 .go-top-button{
     width: 0rem;
