--- a/css/style.css
+++ b/css/style.css
@@ -211,6 +211,59 @@ body {
     }
 }
 
+.scroll-down {
+    height: 70px;
+    width: 40px;
+    border: 3px solid rgb(89, 95, 255);
+    position: absolute;
+    bottom: 20px;
+    border-radius: 50px;
+    cursor: pointer;
+    inset: 0;
+    margin: auto;
+    margin-bottom: 20px;
+    z-index: 10;
+}
+
+.scroll-down::before,
+.scroll-down::after {
+    content: "";
+    position: absolute;
+    top: 20%;
+    left: 50%;
+    height: 10px;
+    width: 10px;
+    transform: translate(-50%, -100%) rotate(45deg);
+    border: 2px solid rgb(0, 247, 255);
+    border-top: transparent;
+    border-left: transparent;
+    animation: scroll-down 1.2s ease-in-out infinite;
+}
+
+.scroll-down::before {
+    top: 30%;
+    animation-delay: 0.3s;
+}
+
+@keyframes scroll-down {
+    0% {
+        opacity: 0;
+    }
+
+    30% {
+        opacity: 1;
+    }
+
+    60% {
+        opacity: 1;
+    }
+
+    100% {
+        top: 90%;
+        opacity: 0;
+    }
+}
+
 /*====================================================================================================*/
 /*==================================== HEADER SECTION STYLES =========================================*/
 /*====================================================================================================*/
