--- a/css/style.css
+++ b/css/style.css
@@ -141,28 +141,29 @@ body {
 .go-top-container {
     position: fixed;
     bottom: 0;
-    right: 1rem;
+    right: 0rem;
     width: 3rem;
     height: 3rem;
     z-index: -1;
     transition: .2s;
 }
 
-.go-top-button{
+.go-top-button {
+    position: absolute;     /* ← agregar ESTO */
+    top: 0;                 /* ← pegar arriba del contenedor */
+    left: 0;                /* ← pegar a la izquierda del contenedor */
     width: 0rem;
     height: 0rem;
-    background: #064e8d63;
+    background: #00ccff63;
     border-radius: 50%;
     cursor: pointer;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-35%, -35%);
     transition: .2s;
     z-index: -1;
 }
 
 .go-top-button:hover{
-    background: rgba(0, 225, 255, 0.315);
+    background: rgba(0, 225, 255, 0.493);
     transition: all .5s;
 }
 
@@ -1568,6 +1569,10 @@ body {
 
     .card-button{
         padding: .6rem .5rem;
+    }
+
+    .go-top-button {
+        transform: translate(-10%, -10%);
     }
 
 }
